add reoutes feature schedule
